- Added zstd to initramfs so we can use it in squashfs, rsync, and zfs, as well
  as have it available in the maint shell.
- Upgraded busybox, eudev, lvm2, e2fsprogs, squashfs-tools, dropbear,
  linux-firmware, intel-ucode, wireless-regdb, zfs.
- Overhauled command line parsing using getopt with better usage description.
- Added help2man generated man page.

* v0.17.2
2022-01-16: RuckusRD v0.17.2

Point release fixing a couple minor issues:

- Apt was reporting installed size as 16K instead of around 1M.
- Kernel/header injection (modinject) was failing if /lib/modules didn't
  already exist.
- Broken symlink checking was checking symlinks with absolute paths against the
  host system, resulting in false positives during building (e.g., zfs wasn't
  installed on host system).
- Tweaked build rules for subprojects to get them building on my embedded
  Ubuntu 20.04 test system.

* v0.17.1
2021-11-17: RuckusRD v0.17.1

Teeny point release.  Looks like we forgot to actually install microcodenator,
even though we called it out in the previous release.

* v0.17.0
2021-09-25: RuckusRD v0.17.0

Firmware and microcode handling improvements.  Building now generates fw.sqsh
and ucode.img in subprojects.  These two files can/should be installed by the
user into /boot, where they can then be updated independently.  If present (or
specified explicitly) when running ruckusrd, /boot/ucode.img is prepended to a
generated initrd file to support early loading of CPU microcode.  During boot,
if /fw.sqsh exists it is mounted to provide firmware to early loaded kernel
modules.  The contents of fw.sqsh (i.e., /lib/firmware) are included by
modinject to keep post-boot /lib/firmware consistent with initrd.

Both fw.sqsh and ucode.img are universal images.  They have ALL the firmware
and ALL the microcode rolled up into larger files.  For systems that don't want
to use a big distro-style image, host-specific fw.img and ucode.img can be